--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -154,7 +154,7 @@
     position: relative;
     cursor: pointer;
     padding: 10px 15px;
-    border: 1px solid @gray-ddd;
+    border: 1px solid @grey-94;
   }
 
   input[type="checkbox"] {
