--- a/less/variables.less
+++ b/less/variables.less
@@ -16,6 +16,7 @@
 @gray-666:               #666;
 @gray-888:               #888;
 @gray-999:               #999;
+@grey-94:                #949494;
 @gray-d7:                #d7d7d7;
 @gray-ddd:               #ddd;
 @gray-lighter:           #eee;
@@ -919,7 +920,7 @@
 
 // KU accordions
 @panel-accordion-text:           @text-color;
-@panel-accordion-border:         #949494;
+@panel-accordion-border:         @grey-94;
 @panel-accordion-heading-bg:     #f8f8f8;
 
 
