--- a/less/variables.less
+++ b/less/variables.less
@@ -115,11 +115,11 @@
 //Samf
 @samf-sub_1: #2a3d66;
 @samf-sub_1-hover: darken(@samf-sub_1, 5%);
-@samf-sub_2: #a0b763;
+@samf-sub_2: #598000;
 @samf-sub_2-hover: darken(@samf-sub_2, 5%);
-@samf-sub_3: #95c1b0;
+@samf-sub_3: #4f7d71;
 @samf-sub_3-hover: darken(@samf-sub_3, 5%);
-@samf-sub_4: #7d8a8b;
+@samf-sub_4: #6c797a;
 @samf-sub_4-hover: darken(@samf-sub_4, 5%);
 //Jura
 @jura-sub_1: #ff7d02;
