--- a/less/panels.less
+++ b/less/panels.less
@@ -380,7 +380,7 @@
     position: relative;
     border: 0;
     &:focus-within {
-      .tab-focus();
+      .tab-focus-v2();
     }
 
     .panel-title {
