--- a/less/buttons.less
+++ b/less/buttons.less
@@ -18,6 +18,7 @@
   // KU:
   letter-spacing: @btn-letter-spacing;
   text-transform: uppercase;
+  text-decoration: none;
   // KU end
   text-align: center;
   vertical-align: middle;
