--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -1297,6 +1297,7 @@
   color: inherit!important;
   display: block;
   position: relative;
+  text-decoration: none;
 
   &:hover {
     text-decoration: none;
