--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -68,7 +68,7 @@ textarea {
 
 a {
   color: @link-color;
-  text-decoration: none;
+  text-decoration: underline;
 
   &:hover {
     color: @link-hover-color;
