--- a/less/ku-leftmenu.less
+++ b/less/ku-leftmenu.less
@@ -26,6 +26,7 @@
 
     a {
       color: inherit;
+      text-decoration: none;
 
       &:hover {
         text-decoration: none;
@@ -146,6 +147,7 @@
       a {
         color: @gray-dark;
         font-size: 1em;
+        text-decoration: none;
         padding: 3px 5px 3px 15px;
         position: relative;
         display: inline-block;
