--- a/less/navbar.less
+++ b/less/navbar.less
@@ -525,6 +525,7 @@
   .navbar-nav {
     > li > a {
       color: @navbar-default-link-color;
+      text-decoration: none;
 
       &:focus,
       &:hover {
