--- a/less/panels.less
+++ b/less/panels.less
@@ -392,6 +392,7 @@
       a {
         display: block;
         padding: 8px 30px 10px 10px;
+        text-decoration: none;
 
         &:before {
           .glyphicon;
