--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -142,6 +142,7 @@
         font-size: inherit;
         color: inherit;
         display: block;
+        text-decoration: none;
       }
     }
 
@@ -323,9 +324,6 @@ nav[aria-label="Pager"] {
 
   form {
     display: flex;
-    // @media only screen and (min-width: @screen-sm-max) {
-    //   height: 30px;
-    // }
   }
 
   .search-news-query {
