--- a/less/ku-datetimepicker.less
+++ b/less/ku-datetimepicker.less
@@ -217,6 +217,7 @@
         a {
           color: @white-color;
           display: block;
+          text-decoration: none;
 
           &:hover {
             text-decoration: none;
