--- a/less/navbar.less
+++ b/less/navbar.less
@@ -357,6 +357,9 @@
         padding: 0 7px;
         line-height: @ku-topbar-height;
         text-decoration: none;
+        &:hover {
+          text-decoration: underline;
+        }
       }
     }
   }
