--- a/less/panels.less
+++ b/less/panels.less
@@ -419,7 +419,7 @@
       border-top: 0;
 
       .panel-body {
-        padding-top: 0;
+        padding-top: 5px;
         padding-bottom: 15px;
         border-top: 0;
 
