--- a/less/panels.less
+++ b/less/panels.less
@@ -378,9 +378,6 @@
     padding: 0;
     position: relative;
     border: 0;
-    &:focus-within {
-      .tab-focus-v2();
-    }
 
     .panel-title {
       font-size: 16px;
@@ -393,6 +390,9 @@
         display: block;
         padding: 8px 30px 10px 10px;
         text-decoration: none;
+        &:focus {
+          .tab-focus-v2();
+        }
 
         &:before {
           .glyphicon;
