--- a/less/ku-social-boxtop.less
+++ b/less/ku-social-boxtop.less
@@ -7,7 +7,8 @@
     .icon;
     margin: 0;
     position: relative;
-    font-size: 36px;
+    font-size: 32px;
+    line-height: 0;
   }
 
   h2 {
@@ -16,7 +17,7 @@
     line-height: 1.25;
     display: inline-block;
     padding: 0;
-    margin: 31px 0 0 0;
+    margin: 0;
     letter-spacing: .6px;
   }
 
