--- a/less/type.less
+++ b/less/type.less
@@ -468,7 +468,7 @@ h2 {
     line-height: 1.2;
     letter-spacing: 0.7px;
     margin: 0;
-    padding: 10px 5px 8px 0;
+    padding: 0 5px 8px 0;
     border-bottom: 1px solid #bebebe;
   }
 }
