--- a/docs/assets/css/doctypes/cfimbooking.css
+++ b/docs/assets/css/doctypes/cfimbooking.css
@@ -56,6 +56,17 @@ a.button:hover,
   float: right;
 }
 
+#cbook_container {
+  clear: both;
+  width: auto;
+  border: solid 1px #ccc;
+  padding: 1em;
+}
+
+#cbook_container h1 {
+  margin: 1em 0 0.5em !important;
+}
+
 /* Calendar view */
 #cbook_tablenav {
   background-color: #f3f3f3;
