--- a/less/ku-videoplayer.less
+++ b/less/ku-videoplayer.less
@@ -15,7 +15,7 @@
 }
 
 .toplogo {
-  &:hover {
+  &:hover, &:focus {
     .control-layer {
       display: block;
       background: linear-gradient(to bottom, rgba(@gray-base,0) 0%,rgba(@gray-base,0.65) 100%);
