--- a/less/ku-videoplayer.less
+++ b/less/ku-videoplayer.less
@@ -12,13 +12,13 @@
   left: 0;
   bottom: 0;
   padding: 8px 10px;
+  background: linear-gradient(to bottom, rgba(@gray-base,0) 0%,rgba(@gray-base,0.65) 100%);
 }
 
 .toplogo {
-  &:hover, &:focus {
+  &:hover {
     .control-layer {
       display: block;
-      background: linear-gradient(to bottom, rgba(@gray-base,0) 0%,rgba(@gray-base,0.65) 100%);
     }
   }
 
@@ -27,6 +27,9 @@
 
     &:focus {
       .tab-focus-v2();
+      &+ .control-layer {
+        display: block;
+      }
     }
 
     &::after {
