Video player outline

--- a/less/ku-videoplayer.less
+++ b/less/ku-videoplayer.less
@@ -26,27 +26,26 @@
 
   a {
     display: block;
-    position: relative;
 
     &:focus {
       .tab-focus-v2();
 
-      // &+ .control-layer {
-      //   display: block;
-      // }
+      &+ .control-layer {
+        display: block;
+      }
     }
 
-    // &::after {
-    //   position: absolute;
-    //   top: 0;
-    //   right: 0;
-    //   bottom: 0;
-    //   left: 0;
-    //   z-index: 1;
-    //   pointer-events: auto;
-    //   content: "";
-    //   background-color: rgba(0,0,0,0);
-    // }
+    &::after {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      z-index: 1;
+      pointer-events: auto;
+      content: "";
+      background-color: rgba(0,0,0,0);
+    }
   }
 
   video::-webkit-media-controls {
