Video player outline

--- a/less/ku-videoplayer.less
+++ b/less/ku-videoplayer.less
@@ -55,6 +55,7 @@
 
 .toplogo #video {
   display: block;
+  width: 100%;
   // Fix for IE11:
   max-width: (@container-large-desktop - (@grid-gutter-width *2)); // 1018px;
 }
