--- a/less/variables.less
+++ b/less/variables.less
@@ -174,10 +174,10 @@
 @outline-color:     @gray-base;
 
 //** Global textual link color.
-@link-color:            #165aad;
+@link-color:            #3479b2;
 //** Link hover color set via `darken()` function.
 @link-hover-color:      @link-color;
-@link-visited-color:      #3d239c;
+@link-visited-color:      #2c7b96;
 //** Link hover decoration.
 @link-hover-decoration: underline;
 
