--- a/less/panels.less
+++ b/less/panels.less
@@ -378,7 +378,8 @@
     position: relative;
     border: 0;
     &:focus-within {
-      .tab-focus-v2();
+      //.tab-focus-v2();
+      outline: 1px solid #106Bfe;
     }
 
     .panel-title {
