--- a/less/panels.less
+++ b/less/panels.less
@@ -379,7 +379,7 @@
     border: 0;
     &:focus-within {
       //.tab-focus-v2();
-      outline: 1px solid #106Bfe;
+      outline: 1px solid #3479b2;
     }
 
     .panel-title {
