--- a/less/variables.less
+++ b/less/variables.less
@@ -177,7 +177,7 @@
 @link-color:            #3479b2;
 //** Link hover color set via `darken()` function.
 @link-hover-color:      @link-color;
-@link-visited-color:      #2c7b96;
+@link-visited-color:      #3d239c;
 //** Link hover decoration.
 @link-hover-decoration: underline;
 
