--- a/less/variables.less
+++ b/less/variables.less
@@ -170,7 +170,7 @@
 @text-color:            @gray-dark;
 
 //** Global tab outline color.
-@outline-color2:    #106Bfe;
+@outline-color2:    @link-color;
 @outline-color:     @gray-base;
 
 //** Global textual link color.
