--- a/less/panels.less
+++ b/less/panels.less
@@ -378,8 +378,7 @@
     position: relative;
     border: 0;
     &:focus-within {
-      //.tab-focus-v2();
-      outline: 1px solid #3479b2;
+      .tab-focus-v2();
     }
 
     .panel-title {
