PURE links styling

--- a/docs/assets/css/doctypes/publikationsliste.css
+++ b/docs/assets/css/doctypes/publikationsliste.css
@@ -156,6 +156,7 @@ ol.portal_list li h2.title a, ol.portal_list li a {
   line-height: 18px;
   /* letter-spacing: .6px; */
   word-break: break-word;
+  text-decoration: underline;
 }
 
 ol.portal_list li a>span>strong {
