--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -32,6 +32,9 @@
       color: inherit;
       display: block;
       text-decoration: none;
+      &:hover {
+        text-decoration: underline;
+      }
     }
   }
 
