--- a/less/navs.less
+++ b/less/navs.less
@@ -113,6 +113,7 @@
       border-right: 1px solid @gray;
       border-left: 1px solid @gray;
       border-radius: @nav-tabs-border-radius;
+      text-decoration: none;
       &:hover {
         background-color: @ku-nav-tabs-and-pills-hover-bg-color
         //border-color: @nav-tabs-link-hover-border-color @nav-tabs-link-hover-border-color @nav-tabs-border-color;
