Fix links underline

--- a/less/dropdowns.less
+++ b/less/dropdowns.less
@@ -67,6 +67,7 @@
     font-weight: normal;
     line-height: @line-height-base;
     color: @dropdown-link-color;
+    text-decoration: none;
     white-space: nowrap; // prevent links from randomly breaking onto new lines
   }
 }
