--- a/less/mixins/list-group.less
+++ b/less/mixins/list-group.less
@@ -17,6 +17,7 @@
       &:focus {
         color: @color;
         background-color: darken(@background, 5%);
+        text-decoration: none;
       }
       &.active,
       &.active:hover,
