--- a/docs/assets/css/src/docs.css
+++ b/docs/assets/css/src/docs.css
@@ -173,8 +173,8 @@ h2 code, h3 code, h4 code {
 }
 
 .bs-docs-nav .navbar-brand, .bs-docs-nav .navbar-nav > li > a {
-  font-weight: 500;
   color: #252525;
+  text-decoration: none;
 }
 
 .bs-docs-nav .navbar-nav > li > a:hover, .bs-docs-nav .navbar-nav > .active > a, .bs-docs-nav .navbar-nav > .active > a:hover {
@@ -493,6 +493,7 @@ h2 code, h3 code, h4 code {
   font-size: 13px;
   /*font-weight: 500;*/
   color: #252525;
+  text-decoration: none;
   border-left: 1px solid #fff;
 }
 
