--- a/less/pager.less
+++ b/less/pager.less
@@ -14,6 +14,7 @@
     > a,
     > span {
       color: @btn-default-color;
+      text-decoration: none;
       display: inline-block;
       padding: 5px 14px;
       background-color: @pager-bg;
