--- a/less/list-group.less
+++ b/less/list-group.less
@@ -46,6 +46,7 @@
 a.list-group-item,
 button.list-group-item {
   color: @list-group-link-color;
+  text-decoration: none;
 
   .list-group-item-heading {
     color: @list-group-link-heading-color;
