--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -187,6 +187,7 @@
       margin-top: 0;
       height: 0;
       transform: scaleY(0);
+      transition: transform 0.2s ease-out;
     }
 
     &:checked~ul.menu-list {
@@ -205,6 +206,9 @@
           display: block;
           color: inherit;
           text-decoration: none;
+          &:hover {
+            text-decoration: underline;
+          }
         }
       }
     }
