--- a/docs/assets/css/doctypes/form.css
+++ b/docs/assets/css/doctypes/form.css
@@ -9,6 +9,7 @@
 .gdpr-notice {
   margin: 10px 0;
 }
+
 .gdpr-notice input[type="checkbox"] {
   position: relative;
   margin-right: 5px;
@@ -22,4 +23,8 @@
 .gdpr-label {
   font-weight: 400;
   line-height: 1.5;
+}
+
+.gdpr-label input[type=checkbox] {
+  margin-left: 0;
 }
