--- a/docs/assets/css/slider/slick-theme.css
+++ b/docs/assets/css/slider/slick-theme.css
@@ -5,6 +5,15 @@
   margin-top: 8px;
 }
 
+@media (min-width: 768px) {
+.slide-gallery .slick-slider {
+  height: auto:
+}
+}
+.slide-gallery .caption {
+  position: relative;
+  background: #f5f5f5;
+}
 /* Slider gallery start */
 .gallery-nav {
   /*margin-top: 1px;*/
@@ -61,6 +70,8 @@
   filter: brightness(90%) blur(0);
   -webkit-filter: brightness(90%) blur(0);
 }
+
+
 
 @media (min-width: 768px) and (max-width: 991px) {
 
