--- a/less/ku-legacy.less
+++ b/less/ku-legacy.less
@@ -16,6 +16,7 @@
 
             a {
               color: @text-color;
+              text-decoration: none;
             }
           }
         }
@@ -29,9 +30,7 @@
 }
 // Banner doctype
 
-#banners-3col {
-  padding: 0;
-}
+
 // Old advanced lists
 
 ul {
