--- a/docs/assets/css/doctypes/GeoNatVidenblad.css
+++ b/docs/assets/css/doctypes/GeoNatVidenblad.css
@@ -19,7 +19,7 @@
 }
 
 .VidenBlad-Authors-Elem+.VidenBlad-Authors-Elem {
-  margin-top: 23åpx;
+  margin-top: 23px;
 }
 
 .VidenBlad-Authors-ElemImg {
