--- a/docs/assets/css/doctypes/geonatvidenserieforside.css
+++ b/docs/assets/css/doctypes/geonatvidenserieforside.css
@@ -1,3 +1,11 @@
+#geonatloginform, .Geonat-Login .LoginLinks {
+  min-height: 20px;
+  padding: 15px;
+  background-color: #f5f5f5;
+  border: 1px solid #e3e3e3;
+  border-radius: 2px;
+}
+
 .TableList .HeadRow {
   color: #4a4949;
   font-weight: 700;
