--- a/less/ku-cms-components.less
+++ b/less/ku-cms-components.less
@@ -136,7 +136,6 @@ nav {
   &.picture .title {
     display: none;
   }
-
   // Remove bottom margin from any last element in a grid column
   &:last-child {
     margin-bottom: 0;
@@ -199,7 +198,8 @@ nav {
     }
   }
 
-  .panel, .flexiblebox-as-rightbox {
+  .flexiblebox-as-rightbox,
+  .panel {
     &:last-child {
       margin-bottom: 0;
     }
