--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -367,6 +367,8 @@ nav[aria-label="Pager"] {
 .custom-search-results {
   .nyhedsliste_dato {
     color: @text-color!important;
+    display: flex;
+    flex-direction: column;
   }
 
   .media {
