--- a/less/variables.less
+++ b/less/variables.less
@@ -88,20 +88,20 @@
 //Hum
 @hum-sub_1: #1d2e4a;
 @hum-sub_1-hover: darken(@hum-sub_1, 5%);
-@hum-sub_2: #b7b5b5;
+@hum-sub_2: #3e3d40;
 @hum-sub_2-hover: darken(@hum-sub_2, 5%);
-@hum-sub_3: #7d899b;
+@hum-sub_3: #677389;
 @hum-sub_3-hover: darken(@hum-sub_3, 5%);
-@hum-sub_4: #e7400d;
+@hum-sub_4: #dB3B0a;
 @hum-sub_4-hover: darken(@hum-sub_4, 5%);
 //Teol
-@teol-sub_1: #d8680b;
+@teol-sub_1: #c85204;
 @teol-sub_1-hover: darken(@teol-sub_1, 5%);
 @teol-sub_2: #093f50;
 @teol-sub_2-hover: darken(@teol-sub_2, 5%);
-@teol-sub_3: #84bfcc;
+@teol-sub_3: #3b7d8c;
 @teol-sub_3-hover: darken(@teol-sub_3, 5%);
-@teol-sub_4: #c8d351;
+@teol-sub_4: #23499b;
 @teol-sub_4-hover: darken(@teol-sub_4, 5%);
 //Sund
 @sund-sub_1: #77b6e5;
