--- a/less/variables.less
+++ b/less/variables.less
@@ -122,11 +122,11 @@
 @samf-sub_4: #6c797a;
 @samf-sub_4-hover: darken(@samf-sub_4, 5%);
 //Jura
-@jura-sub_1: #ff7d02;
+@jura-sub_1: #c85204;
 @jura-sub_1-hover: darken(@jura-sub_1, 5%);
-@jura-sub_2: #33838a;
+@jura-sub_2: #327f86;
 @jura-sub_2-hover: darken(@jura-sub_2, 5%);
-@jura-sub_3: #849482;
+@jura-sub_3: #677967;
 @jura-sub_3-hover: darken(@jura-sub_3, 5%);
 @jura-sub_4: #a3650c;
 @jura-sub_4-hover: darken(@jura-sub_4, 5%);
