--- a/docs/assets/css/doctypes/gridstandard.css
+++ b/docs/assets/css/doctypes/gridstandard.css
@@ -4,11 +4,13 @@ has no breadbrumbs (which creates the margin-top to h1):*/
   margin-top: 29px
 }
 
-.breadcrumbs~h1 {
-  margin-top: 0;
+@media (max-width: 767px) {
+  .breadcrumbs~h1 {
+    margin-top: 0;
+  }
 }
 
 /* Special case for search page */
 .main-content>#loading_ajax+h1 {
-    margin-top: 29px;
+  margin-top: 29px;
 }
