--- a/docs/assets/css/doctypes/gridstandard.css
+++ b/docs/assets/css/doctypes/gridstandard.css
@@ -4,7 +4,7 @@ has no breadbrumbs (which creates the margin-top to h1):*/
   margin-top: 29px
 }
 
-@media (max-width: 767px) {
+@media (min-width: 768px) {
   .breadcrumbs~h1 {
     margin-top: 0;
   }
