--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -1,5 +1,4 @@
 /* Slider */
-
 .gallery-nav,
 .slide-gallery,
 .slideshow {
@@ -355,16 +354,16 @@
     color: @text-color;
     background: @gray-f5;
 
+    h1, h3 {
+      margin-top: 0;
+    }
+
     h2 {
       margin-top: 0;
       margin-bottom: 5px;
       color: inherit;
       font-size: 20px;
       line-height: 1.2;
-    }
-
-    h3 {
-      margin-top: 0;
     }
 
     p {
