--- a/docs/assets/css/parallax/parallax.less
+++ b/docs/assets/css/parallax/parallax.less
@@ -40,6 +40,7 @@
 }
 
 .ku-branding {
+  display: none;
   &::after {
     display: none;
   }
@@ -107,13 +108,6 @@
     padding: 15px;
     background: rgba(@white-color, .9);
   }
-}
-
-.video-bg video {
-  min-width: 100%;
-  position: fixed;
-  top: 0;
-  z-index: -9999;
 }
 
 .jarallax-img {
