Parallax video play button

--- a/docs/assets/css/parallax/parallax.less
+++ b/docs/assets/css/parallax/parallax.less
@@ -89,6 +89,11 @@
       margin-top: 0;
     }
   }
+  .slick-pause {
+    right: auto;
+    left: 3%;
+    bottom: 5%;
+  }
 }
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
   /* IE 11 only in order to understand vertical alignment */
