--- a/docs/assets/css/parallax/parallax.less
+++ b/docs/assets/css/parallax/parallax.less
@@ -41,6 +41,7 @@
 
 .ku-branding {
   display: none;
+
   &::after {
     display: none;
   }
@@ -77,6 +78,8 @@
   right: 50%;
   margin-left: -50vw;
   margin-right: -50vw;
+  // top + bottom
+  box-shadow: 0 -24px 16px -10px rgba(@gray-base,.5), 0 24px 16px -10px rgba(@gray-base,.5);
 
   .block-content {
     font-size: 14px;
@@ -89,9 +92,9 @@
       margin-top: 0;
     }
   }
+
   .slick-pause {
-    right: auto;
-    left: 3%;
+    right: 2%;
     bottom: 5%;
   }
 }
@@ -108,6 +111,7 @@
   background-attachment: fixed;
   background-size: cover;
   background-position: 50% 0;
+  box-shadow: none;
 
   .block-content {
     padding: 15px;
