Parallax video play on scroll into view

--- a/docs/assets/css/parallax/parallax.less
+++ b/docs/assets/css/parallax/parallax.less
@@ -78,8 +78,8 @@
   right: 50%;
   margin-left: -50vw;
   margin-right: -50vw;
-  // top + bottom
-  box-shadow: 0 -24px 16px -10px rgba(@gray-base,.5), 0 24px 16px -10px rgba(@gray-base,.5);
+  // top + bottom shadow
+  box-shadow: 0 -24px 16px 0 rgba(@gray-base,.3), 0 24px 16px 0 rgba(@gray-base,.3);
 
   .block-content {
     font-size: 14px;
