--- a/docs/assets/css/doctypes/publikationsliste.css
+++ b/docs/assets/css/doctypes/publikationsliste.css
@@ -219,7 +219,7 @@ div.rendering p.type, ol.portal_list>li {
   clear: both;
 }
 
-.view_container ul.tabs > li {
+.view_container ul.tabs>li {
   margin-left: 2px;
 }
 
@@ -242,10 +242,12 @@ div.rendering p.type, ol.portal_list>li {
   border-bottom: 0;
   font-weight: inherit;
 }
+
 .portal-dropdown .dropdown-menu {
   padding: 0;
   margin: 0;
 }
+
 .quick_nav {
   margin: 0 0 15px 0 !important;
 }
@@ -298,7 +300,6 @@ table.properties>tbody>tr:hover {
 /* #purecontent .person_text h2.title a {
   color: inherit !important;
 } */
-
 .rendering h2 {
   margin: 0;
 }
@@ -321,7 +322,12 @@ table.properties>tbody>tr:hover {
 
 .view_title .type {
   font-size: 16px !important;
-  font-weight: 600 !important;
+  font-weight: 400 !important;
+}
+
+.view_title .person {
+  font-size: 16px;
+  font-weight: 600;
 }
 
 .column-layout-standard .view_title .type {
@@ -381,7 +387,7 @@ div.portal_navigator_top {
 .relations a.link {
   overflow-wrap: break-word;
   word-wrap: break-word;
-  text-decoration: underline!important;
+  text-decoration: underline !important;
 }
 
 @media all and (max-width: 480px) {
