--- a/docs/assets/css/doctypes/medarbejderoversigt.css
+++ b/docs/assets/css/doctypes/medarbejderoversigt.css
@@ -23,6 +23,9 @@
   .emplistworkarea + .emplistphone {
     width: 20%;
   }
+  .emplistworkarea + .emplistphone + .emplistemail {
+    width: 15%;
+  }
   .emplisttitle + .emplistphone + .emplistemail {
     width: 12%;
   }
