--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -26,6 +26,43 @@
       .image-fadeOut();
     }
   }
+  
+  &.faculty_color {
+    background: @ku-red;
+    color: @white-color;
+
+    .header {
+      background: fade(@ku-red, 83%);
+      color: @white-color;
+    }
+
+    &.text-top {
+      .header {
+        background: @ku-red;
+      }
+    }
+
+    &.outlined {
+      border: 1px solid @ku-red;
+      color: @ku-red;
+
+      &:hover {
+        border: 1px solid @ku-red-hover;
+      }
+    }
+
+    &.full {
+      &:hover {
+        background: @ku-red-hover;
+      }
+    }
+
+    &.text-down {
+      &:hover {
+        background: @ku-red-hover;
+      }
+    }
+  }
 
   &.subcolor_5 {
     background: @ku-gray;
