Color change slick slider captions

--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -370,6 +370,18 @@
       margin: 0 0 6px;
     }
 
+    &.faculty_color {
+      background: @ku-red;
+      color: @white-color;
+      @media (min-width: @screen-sm) {
+        background: fade(@ku-red, 93%);
+      }
+
+      &.full-bg {
+        background: @ku-red;
+      }
+    }
+
     &.subcolor_5 {
       background: @ku-gray;
       color: @text-color;
